<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<SurfaceView android:id="@+id/surface"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/url" />

	<EditText android:id="@+id/path"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/url" />

	<Button android:id="@+id/play" 
	  android:text="@string/play"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<Button android:id="@+id/pause" 
	  android:text="@string/pause"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<Button android:id="@+id/reset" 
	  android:text="@string/reset"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<Button android:id="@+id/stop" 
	  android:text="@string/stop"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>
